# PBDSofaPlugIn

./: CMakeLists.txt  CMakeLists.txt.user.20  CMakeLists.txt.user.4.10-pre1  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.4.9-pre1  PBDAnimationLoop.cpp  PBDAnimationLoop.hpp  PBDFixedPoint.cpp  PBDFixedPoint.hpp  PrecomputedValues.cpp  PrecomputedValues.hpp  README.md  initPBDPlugin.cpp  initPBDPlugin.hpp
AnimationLoop/: PBDAnimationLoop.cpp  PBDAnimationLoop.hpp
Collision/: PBDContactManager.cpp  PBDContactManager.hpp
Common/: Common.hpp  MathFunctions.cpp  MathFunctions.hpp
Constraint/: PBDBaseConstraint.hpp
Factory/: Transform3dToRigid.cpp  Transform3dToRigid.hpp  Transform3dToRigid.inl
InternalData/: PBDObject.cpp  PBDObject.hpp
Main/: PBDAnimationLoop.cpp  PBDAnimationLoop.hpp
Object/: PBDObject.cpp  PBDObject.hpp
Solver/: PBDExplicitIntegrator.cpp  PBDExplicitIntegrator.hpp  PBDSolver.cpp  PBDSolver.hpp
Visitor/: PBDEndVisitor.cpp  PBDEndVisitor.hpp  PBDInitVisitor.cpp  PBDInitVisitor.hpp  PBDVisitor.cpp  PBDVisitor.hpp
constraint/: Clothe.scn  PBDBaseConstraint.hpp  PBDBending.cpp  PBDBending.hpp  PBDFixedPoint.cpp  PBDFixedPoint.hpp  PBDIsometricBending.cpp  PBDIsometricBending.hpp  PBDStrainDynamic.cpp  PBDStrainDynamic.hpp  PBDStrainShape.cpp  PBDStrainShape.hpp  PBDStretch.cpp  PBDStretch.hpp
examples/: ElasticRod.scn  FEMTetra.scn  FEMTri.scn  IsometricBend.scn  StrainEnergy.scn  StrainTri.scn  Stretch.scn  StretchAndBend.scn
object/: BeamElement.cpp  BeamElement.hpp  PBDBaseConstraintData.cpp  PBDBaseConstraintData.hpp  (+5 more)
(+107 files in other folders)
