cmake_minimum_required(VERSION 3.1)

project(AlphaV VERSION 0.0.1)

find_package(SofaFramework REQUIRED)

FILE(GLOB_RECURSE SOURCES_FILES ${CMAKE_SOURCE_DIR}/*.cpp)
FILE(GLOB_RECURSE HEADER_FILES ${CMAKE_SOURCE_DIR}/*.hpp)
FILE(GLOB_RECURSE INLINE_FILES ${CMAKE_SOURCE_DIR}/*.inl)

add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${INLINE_FILES} ${SOURCES_FILES})
target_link_libraries(${PROJECT_NAME} SofaCore)
set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "-DSOFA_BUILD_MYPLUGIN")
